# plugin_template

./: INSTALL.sh  README.md  git.ignore
docs/: application.md
example/example1/: CMakeLists.txt  README.md  package.json
example/example1/src/: activator.cpp
example/example1/src/installation/: test_installation_node.cpp  test_installation_node.h  test_installation_node_view.h
example/example1/src/program/: test_program_node_contribution.cpp  test_program_node_contribution.h  test_program_node_service.h  test_program_node_view.cpp  test_program_node_view.ui
example/example2/: CMakeLists.txt  README.md  package.json
example/example2/resources/: manifest.json
example/example2/src/: activator.cpp
example/example2/src/program/test2/: test2_program_node_contribution.cpp  test2_program_node_contribution.h  test2_program_node_service.cpp  test2_program_node_service.h  test2_program_node_view.cpp  test2_program_node_view.h  test2_program_node_view.ui
example/example2/src/program/test2Child1/: test2child1_program_node_contribution.cpp  test2child1_program_node_contribution.h  test2child1_program_node_service.cpp  test2child1_program_node_service.h  test2child1_program_node_view.cpp  test2child1_program_node_view.h  test2child1_program_node_view.ui
example/example2/src/program/test2Child2/: test2child2_program_node_contribution.cpp  test2child2_program_node_contribution.h  test2child2_program_node_service.cpp  test2child2_program_node_service.h  test2child2_program_node_view.cpp  test2child2_program_node_view.h  test2child2_program_node_view.ui
example/example3/: CMakeLists.txt  README.md  deploy.sh
example/example3/src/installation/: test_installation_node.cpp  test_installation_node_service.cpp  test_installation_node_service.h  test_installation_node_view.cpp  test_installation_node_view.ui
example/example3/src/lua/: func.cpp  func.h
example/example3/src/program/: test_program_node_contribution.cpp  test_program_node_contribution.h  test_program_node_service.cpp  test_program_node_view.cpp  test_program_node_view.h  test_program_node_view.ui
example/example4/: CMakeLists.txt  README.md  package.json
example/example4/cmake/: CPM_0.34.3.cmake
example/example4/src/: activator.cpp
example/example4/src/installation/: jsonrpctest_installation_node.cpp  jsonrpctest_installation_node.h  jsonrpctest_installation_node_service.cpp  jsonrpctest_installation_node_service.h  jsonrpctest_installation_node_view.cpp  jsonrpctest_installation_node_view.h  jsonrpctest_installation_node_view.ui
example/example4/src/program/: jsonrpctest_program_node_contribution.cpp  jsonrpctest_program_node_contribution.h  jsonrpctest_program_node_service.cpp  jsonrpctest_program_node_service.h  jsonrpctest_program_node_view.cpp  jsonrpctest_program_node_view.h  jsonrpctest_program_node_view.ui
example/example4/src/user_service/: CMakeLists.txt  cpphttplibconnector.hpp  start_user_service_demo.cpp  test.h  user_service.cpp  user_service.h  user_service_rpc_service.cpp  user_service_rpc_service.h  userservicerpcservice.cpp  userservicerpcservice.h
node/: installation_node.cpp  installation_node.h  installation_node_service.cpp  installation_node_service.h  installation_node_view.cpp  installation_node_view.h  installation_node_view.ui  program_node_contribution.cpp  program_node_contribution.h  program_node_service.cpp  program_node_service.h  program_node_view.cpp  program_node_view.h  program_node_view.ui  wizard.json
plugin/: CMakeLists.txt  README.md  activator.cpp  manifest.json  package.json  wizard.json
